# fewshot

./: README.md  pyproject.toml
src/fewshot/: __main__.py  fewshot.py
