[project]
name = "fewshot"
version = "0.1.0"
description = "Simple few-shot prompting with ChatGPT."
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "sacrebleu>=2.4.2",
    "more-itertools>=10.2.0",
    "langchain>=0.2.1",
    "faiss-cpu>=1.8.0",
    "openai>=1.30.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fewshot"]


[tool.black]
line-length = 120
